force-app/main/default/objects/agf__ADM_Scrum_Team__c/fields/agf__Group_ID_Link__c.field-meta.xml
<CustomField>
    <fullName>agf__Group_ID_Link__c</fullName>
    <formula>IF( ISBLANK(agf__Team_Email_Group_ID__c) , &#39;&#39;, HYPERLINK(&#39;/setup/own/groupdetail.jsp?id=&#39;+agf__Team_Email_Group_ID__c+&#39;&amp;setupid=PublicGroups&#39;, agf__Team_Email_Group_ID__c))</formula>
    <label>Group ID Link</label>
    <type>Text</type>
</CustomField>