force-app/main/default/objects/agf__ADM_Scrum_Team__c/fields/agf__Lock_Report__c.field-meta.xml
<CustomField>
    <fullName>agf__Lock_Report__c</fullName>
    <formula>HYPERLINK(&#39;https://build2.soma.salesforce.com/luna2/gatekeeperreport.faces?teamid=&#39; +  Id , &#39;Gatekeeper&#39; )</formula>
    <label>Lock Report</label>
    <type>Text</type>
</CustomField>