force-app/main/default/objects/agf__ADM_Scrum_Team__c/fields/agf__Team_Home_Page__c.field-meta.xml
<CustomField>
    <fullName>agf__Team_Home_Page__c</fullName>
    <description>A link to the team&#39;s home page.  For example their Google Site, Chatter Group or alternative resource where users can find more information about this team.</description>
    <inlineHelpText>Enter the URL for your team&#39;s main site (Google, GitHub, etc). If you don&#39;t have a site, enter the URL for your team&#39;s primary Chatter group.</inlineHelpText>
    <label>Team Homepage</label>
    <type>Url</type>
</CustomField>