force-app/main/default/objects/agf__ADM_Scrum_Team__c/validationRules/agf__Cloud_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>agf__Cloud_is_Required</fullName>
    <active>false</active>
    <errorConditionFormula>ISPICKVAL(agf__Cloud__c, &#39;&#39;)</errorConditionFormula>
    <errorMessage>Please specify the department this team belongs to.</errorMessage>
</ValidationRule>